--- a/index.html
+++ b/index.html
@@ -6,19 +6,106 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>G3 Architecture</title>
   <link rel="stylesheet" href="style.css">
-</head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 <body>
   <!-- --------------header start--------------- -->
-  <header></header>
+  <header class="header">
+
+    <!-- navbar -->
+    <div class="title-nav">
+          <div class="title">
+              <h1>G3 Architects</h1>
+          </div>
+            <nav class="navbar">
+              <ul>
+                <li><a href="#" class="">Home</a></li>
+                <li><a href="#" class="">About</a></li>
+                <li><a href="#" class="">Contact us</a></li>
+                <li><a href="#" class="">Log in</a></li>
+              </ul>
+            </nav>
+    </div>
+  </header>
 <!-- ------------------------header ends---------- -->
 
 
 <!-- -------------main start----------------------------- -->
-  <main></main>
+
+  <main>
+    <!-- Banner and banner text--- -->
+    <div class="banner-section">
+
+        <div class="banner-texts">
+            <h1>Brand New 
+              Group of Architects</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even.
+            </p> 
+            <div class="btn">
+              <button>Explore more</button>
+            </div>
+        </div>
+
+        <div class="banner-image">
+          <img src="./images/banner.png" alt="">
+        </div>
+  
+
+   </div>
+
+<!-- =============Feature gallery -------========------ -->
+
+   <!-- flex for two divs -->
+
+      <div class="feature-gallery">
+
+              <!-- 4 image grid -->
+             <div class="gallery">
+                  <div class="images"><img src="./images/team1.png" alt=""></div>
+                  <div class="images"><img src="./images/team2.png" alt=""></div>
+                  <div class="images"><img src="./images/team3.png" alt=""></div>
+                  <div class="images"><img src="./images/team4.png" alt=""></div>
+             </div>
+
+
+        <!-- a flex box for gallery texts -->
+              <div class="gallery-texts">
+                   <div class="heading">
+                       <h1>Quick list <strong class="black">of Our</strong> <span class="orange">Features</span></h1>
+                   </div>
+                   <div class="paragraph">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                   </div>
+                   <div class="btn">
+                    <button>Explore more</button>
+                   </div>
+                   
+
+              </div>
+      </div>
+
+  </main>
 <!-- --------------------main end-------------------------- -->
 
   <!----------------------- footer ---------------------------->
-<footer></footer>
+<footer>
+
+
+
+<!-- -*******(unique section)*********-! -->
+
+  <div class="unique-section">
+     <p>Email : info@gmail.com</p>
+     <p>Phone : 012345678910</p>
+  <div class="footer-icon">
+    <p>Stay Connected With Us Via <i class="fa-solid fa-hand-point-right"></i></p>
+    <div><img src="./icons/fb.png" alt=""></div>
+    <div><img src="../icons/twitter.png" alt=""></div>
+    <div><img src="./icons/youtube.png" alt=""></div>
+  </div>
+  </div>
+
+</footer>
   <!-- footer ends -->
 </body>
 </html>
